--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.AM"
         tools:targetApi="31">
         <activity
+            android:name=".auth.forgotPassword"
+            android:exported="false" />
+        <activity
             android:name=".auth.Register"
             android:exported="false" />
 
